--- a/index.html
+++ b/index.html
@@ -8,22 +8,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
+  <div class="wrapper">
+    <div class="card">
+      <img src="./images/icon-sedans.svg" alt="">
+      <h2>
+        Sedans
+      </h2>
+      <p>
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
+      </p>
+      <button class="orange">
+        Learn More
+      </button>
+    </div>
+    <div class="card">
+      <img src="./images/icon-suvs.svg" alt="">
+      <h2>
+        SUVs
+      </h2>
+      <p>
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
+      </p>
+      <button class="cyan">
+        Learn More
+      </button>
+    </div>
+    <div class="card">
+      <img src="./images/icon-luxury.svg" alt="">
+      <h2>
+        Luxury
+      </h2>
+      <p>
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
+      </p>
+      <button class="dark-cyan">
+        Learn More
+      </button>
+    </div>
+  </div>
+ 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/newton-ombese-570862210/">Newton Ombese</a>.
   </div>
 </body>
 </html>
